2012-10-15  Charlie Zender  <zender@uci.edu>

	* Bifurcate ncecat logic into GROUP_AGGREGATE and RECORD_AGGREGATE

	* Initiate ncecat -G option for group aggregation

	* Stop printing variable and dimension IDs, since these cluttered
	the printed output and were only used for development purposes
	long ago.

2012-10-09  Charlie Zender  <zender@uci.edu>

	* Deprecate ncra2.c

	* Fix TODO nco1075 where ncpdq was broken for re-arrangements like
	ncpdq -O -C -v PS,time_lon -a lat,lon,time ~/nco/data/in.nc ~/foo.nc
	Eliminate pre-emptive check in nco_var_dmn_rdr_mtd() for condition
	which was not illegal yet led to exit() anyway.
	All that was necessary was to eliminate the exit() call.
	False-postive errors were produced for variables that were record
	in input, fixed in output, and themselves lacked the record
	dimension, i.e., they became fixed (were neutered?) because record
	dimension had to be fixed to satisfy re-ordering of other variables.

2012-10-07  Charlie Zender  <zender@uci.edu>

	* Die when user attempts --mk_rec_dmn with non-existent dimension

	* Fix mistaken handling of return values from nc_inq_unlimdim()
	which caused ncks --fix_rec_dmn to fail. Bug introduced 20111130
	but caught only now because fix_rec_dmn was never
	regression-tested.

2012-10-06  Charlie Zender  <zender@uci.edu>

	* Use nco_fmt_sng_printf_subst() to replace user-specified string
	when missing values encountered. rx needs work.

	* Add --no_blank switch to fix borken regression tests

	* ncks: print underscore ("_") instead of missing value

2012-10-05  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.2 release procedure:
 	Changes since nco-4_2_1: ncks groups, hdr_pad, NULs
	cd ~/nco;cvs tag -d nco-4_2_2;cvs tag -d nco-4_2_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.2 release"
	cvs tag -c nco-4_2_2;cvs tag -c nco-4_2_2-1

2012-09-28  Pedro Vicente  <pvicente@uci.edu>

        * ncks: do not create empty groups

2012-09-22  Pedro Vicente  <pvicente@uci.edu>
